{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 5,
  "lineage": "91551f42-b72e-6738-d249-22a72b2807c2",
  "resources": [
    {
      "module": "module.bastion_host",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177107204587:subnet/subnet-0d80d9e8fae6cad1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "192.168.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d80d9e8fae6cad1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177107204587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "expense-qa-public-us-east-1a",
              "component": "VPC",
              "terraform": "true"
            },
            "vpc_id": "vpc-07eb9efcb3a00a965"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "id"
              }
            ]
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:177107204587:instance/i-0b267c94482783724",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b267c94482783724",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0547f0e455a119eb6",
            "private_dns": "ip-192-168-1-116.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.116",
            "public_dns": "ec2-13-223-255-165.compute-1.amazonaws.com",
            "public_ip": "13.223.255.165",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-086039783add9e16c",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d80d9e8fae6cad1f",
            "tags": {
              "Environment": "dev",
              "Name": "expense-qa-bastion",
              "Terraform": "true",
              "component": "bastion_host"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-qa-bastion",
              "Terraform": "true",
              "component": "bastion_host"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Environment": "dev",
              "Name": "expense-qa-bastion",
              "Terraform": "true",
              "component": "bastion_host"
            },
            "vpc_security_group_ids": [
              "sg-033c4170e3bb38974",
              "sg-0ef6fde0139079a4a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "vpc_security_group_ids"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ami.joindevops",
            "data.aws_ssm_parameter.bastion_host_sg",
            "data.aws_ssm_parameter.public_subnet_ids",
            "module.bastion_host.aws_iam_instance_profile.this",
            "module.bastion_host.aws_iam_role.this",
            "module.bastion_host.aws_security_group.this",
            "module.bastion_host.data.aws_iam_policy_document.assume_role_policy",
            "module.bastion_host.data.aws_partition.current",
            "module.bastion_host.data.aws_ssm_parameter.this",
            "module.bastion_host.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177107204587:security-group/sg-0ef6fde0139079a4a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ef6fde0139079a4a",
            "ingress": [],
            "name": "expense-qa-bastion-20250801074501141500000001",
            "name_prefix": "expense-qa-bastion-",
            "owner_id": "177107204587",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "expense-qa-bastion",
              "Terraform": "true",
              "component": "bastion_host"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-qa-bastion",
              "Terraform": "true",
              "component": "bastion_host"
            },
            "timeouts": null,
            "vpc_id": "vpc-07eb9efcb3a00a965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.public_subnet_ids",
            "module.bastion_host.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177107204587:security-group-rule/sgr-04c6dba0f0fda4ef7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-04c6dba0f0fda4ef7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ef6fde0139079a4a",
            "security_group_rule_id": "sgr-04c6dba0f0fda4ef7",
            "tags": {
              "Environment": "dev",
              "Name": "expense-qa-bastion-ipv4_default",
              "Terraform": "true",
              "component": "bastion_host"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-qa-bastion-ipv4_default",
              "Terraform": "true",
              "component": "bastion_host"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.public_subnet_ids",
            "module.bastion_host.aws_security_group.this",
            "module.bastion_host.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:177107204587:security-group-rule/sgr-0cceacfa20e4518a4",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0cceacfa20e4518a4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ef6fde0139079a4a",
            "security_group_rule_id": "sgr-0cceacfa20e4518a4",
            "tags": {
              "Environment": "dev",
              "Name": "expense-qa-bastion-ipv6_default",
              "Terraform": "true",
              "component": "bastion_host"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "expense-qa-bastion-ipv6_default",
              "Terraform": "true",
              "component": "bastion_host"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.public_subnet_ids",
            "module.bastion_host.aws_security_group.this",
            "module.bastion_host.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}